--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -21,7 +21,7 @@
 
 ---
 
-![Please fasten your seat belt |150x150](../../documentation/images/SeatBelt.PNG)
+![Please fasten your seat belt |150x150](./images/SeatBelt.PNG)
 
 ---
 
