--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -25,13 +25,52 @@
 
 ---
 
-## 1. What is .NET? and .NET History
+**Reference(s):**
+
+> 1. [https://learn.microsoft.com/en-us/dotnet/core/introduction](https://learn.microsoft.com/en-us/dotnet/core/introduction)
+> 1. [https://en.wikipedia.org/wiki/.NET_Framework_version_history#](https://en.wikipedia.org/wiki/.NET_Framework_version_history#)
+> 1. [https://en.wikipedia.org/wiki/.NET](https://en.wikipedia.org/wiki/.NET)
+> 1. [https://dotnet.microsoft.com/en-us/learn/csharp](https://dotnet.microsoft.com/en-us/learn/csharp)
+> 1. [https://learn.microsoft.com/en-gb/dotnet/csharp/language-reference/](https://learn.microsoft.com/en-gb/dotnet/csharp/language-reference/)
+> 1. [https://learn.microsoft.com/en-gb/dotnet/api/?view=net-7.0&term=System.Console](https://learn.microsoft.com/en-gb/dotnet/api/?view=net-7.0&term=System.Console)
+> 1. [https://learn.microsoft.com/en-us/dotnet/](https://learn.microsoft.com/en-us/dotnet/)
+> 1. [https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/integral-numeric-types](https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/integral-numeric-types)
+
+## 1. What is .NET?
 
 > 1. .NET is a free, cross-platform, open source developer platform for building many different types of applications.
 > 1. With .NET, you can use multiple languages, editors, and libraries to build for web, mobile, desktop, games, and IoT.
 > 1. .NET is supported by Microsoft. Microsoft ships official releases that are built and tested on Microsoft-maintained servers in Azure and supported just like any Microsoft product.
 
-## Few Points
+**Reference(s):**
+
+> 1. [https://dotnet.microsoft.com/en-us/learn/dotnet/what-is-dotnet](https://dotnet.microsoft.com/en-us/learn/dotnet/what-is-dotnet)
+
+## 2. .NET History
+
+### 2.1. .NET Framework
+
+> 1. Discussion [https://en.wikipedia.org/wiki/.NET_Framework_version_history#](https://en.wikipedia.org/wiki/.NET_Framework_version_history#)
+
+### 2.2. .NET Core 1.0 to 3.1, and .NET 5/6/7/8 and above
+
+> 1. Discussion [https://en.wikipedia.org/wiki/.NET](https://en.wikipedia.org/wiki/.NET)
+> 1. .NET includes a cross-platform implementation of the CLR known as CoreCLR and a streamlined BCL known as CoreFX.
+> 1. Releases Long Term Support (LTS), Standard Term Support (STS)
+
+## 3. 30,000 foot view of Common Language Runtime (CLR)
+
+> 1. CLR is the virtual machine component of Microsoft's .NET framework and is responsible for managing the execution of .NET programs.
+> 1. It provides core services such as memory management, thread management, and remoting, while also enforcing strict type safety and other forms of code accuracy that promote security and robustness.
+> 1. It is a common language runtime that can be used by many programming languages, such as C#, F#, and Visual Basic.
+
+**Reference(s):**
+
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/clr](https://learn.microsoft.com/en-us/dotnet/standard/clr)
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/managed-execution-process](https://learn.microsoft.com/en-us/dotnet/standard/managed-execution-process)
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Runtime](https://en.wikipedia.org/wiki/Common_Language_Runtime)
+
+## 4. C# Language
 
 > 1. C# is a multi-paradigm programming language.
 > 1. Program class is the entry point for every C# application and is required for every C# application.
@@ -45,24 +84,71 @@
 > 1. The dot operator (.) is used to access members of a namespace, type, or object.
 > 1. Demos -> ProgramStructureDemo.csproj.
 
-## Next Session
+## X. Dotnet CLI Commands
 
-> 1. Top-level statements are statements that aren't inside any type or namespace. They can be used to declare variables and their types, define functions, and define classes.
+```bash
+dotnet --info
+
+dotnet --list-sdks 
+
+dotnet --list-runtimes 
+
+dotnet new
+
+dotnet new list
+
+dotnet new --help
+```
+
+## X. Common our First C# Program
+
+```bash
+dotnet new console -o FirstCSharpProgram --use-program-main
+```
+
+### X.X. Few Terms
+
+> 1. A namespace contains types like classes to group them together.
+> 1. A class contains the members of an object, including methods.
+> 1. A method contains statements that implement an action that an object can take.
+
+## X. Exploring Program Structure
+
+> 1. To be decided
+
+## X. Exploring Project Structure
+
+> 1. To be decided
+
+## X. Common Language Infrastructure (CLI)
+
+> 1. CLI is an open specification developed by Microsoft and standardized by ISO and ECMA that describes executable code and a runtime environment that allows multiple high-level languages to be used on different computer platforms without being rewritten for specific architectures.
 
 **Reference(s):**
 
-> 1. [https://learn.microsoft.com/en-us/dotnet/core/introduction](https://learn.microsoft.com/en-us/dotnet/core/introduction)
-> 1. [https://en.wikipedia.org/wiki/.NET_Framework_version_history#](https://en.wikipedia.org/wiki/.NET_Framework_version_history#)
-> 1. [https://en.wikipedia.org/wiki/.NET](https://en.wikipedia.org/wiki/.NET)
-> 1. [https://dotnet.microsoft.com/en-us/learn/csharp](https://dotnet.microsoft.com/en-us/learn/csharp)
-> 1. [https://learn.microsoft.com/en-gb/dotnet/csharp/language-reference/](https://learn.microsoft.com/en-gb/dotnet/csharp/language-reference/)
-> 1. [https://learn.microsoft.com/en-gb/dotnet/api/?view=net-7.0&term=System.Console](https://learn.microsoft.com/en-gb/dotnet/api/?view=net-7.0&term=System.Console)
-> 1. [https://learn.microsoft.com/en-us/dotnet/](https://learn.microsoft.com/en-us/dotnet/)
-> 1. [https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/integral-numeric-types](https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/integral-numeric-types)
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure](https://en.wikipedia.org/wiki/Common_Language_Infrastructure)
 
-## 2. .NET History
+---
 
-> 1. Discussion and Demo
+> 1. .NET CLR, BCL, CoreCLR, CoreFX basics
+
+> 1. Basic .NET CLI commands - Project Templates
+> 1. Few Terms
+> 1. Exploring Program Structure
+> 1. Exploring Project Structure
+> 1. ilDasm Demo
+> 1. Console Application with and without Top Level Statements
+>    - 1.1 Without Top Level Statements
+>    - 1.2 With Top Level Statements
+> 1. Introduction to Variables
+> 1. SUMMARY / RECAP / Q&A
+> 1. What is next ?
+
+## Few Points
+
+## Next Session
+
+> 1. Top-level statements are statements that aren't inside any type or namespace. They can be used to declare variables and their types, define functions, and define classes.
 
 ## 1. Console Application with and without Top Level Statements
 
