--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -118,7 +118,10 @@ dotnet new console -o FirstCSharpProgram --use-program-main
 
 ## X. Exploring Project Structure
 
-> 1. To be decided
+> 1. .csporj file
+> 1. Program.cs file
+> 1. obj folder - intermediate files
+> 1. bin folder - output files
 
 ## X. Common Language Infrastructure (CLI)
 
