--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -4,18 +4,9 @@
 
 ## Agenda for this session
 
-> 1. What is .NET? and .NET History
-> 1. .NET CLR, BCL, CoreCLR, CoreFX basics
-> 1. C# Language
-> 1. Basic .NET CLI commands - Project Templates
-> 1. Few Terms
-> 1. Exploring Program Structure
-> 1. Exploring Project Structure
-> 1. ilDasm Demo
-> 1. Console Application with and without Top Level Statements
->    - 1.1 Without Top Level Statements
->    - 1.2 With Top Level Statements
 > 1. Introduction to Variables
+> 1. Showing Compiler Version `#error version`
+> 1. ilDasm Demo
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
 
