Swamy/12aug session 1 updates (#24)
* Changes

* Changes

* Changes

* Changes

* Changes

* Changes

* Create S2.md

* Documentation Updates

* Removed the files

* Changes

* Update tasks.json

--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -1,22 +1,12 @@
-# C# Fundamentals - Part of Microservices Series Session 1 of 120
+# C# Fundamentals - Session 1
 
-## Date: 14-Aug-2023
-
-## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880)
+## Date: XX-XXX-2023
 
 ## Agenda for this session
 
-> 1. What is .NET?
-> 1. .NET History
-> 1. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, CoreFX basics
-> 1. C# Language
-> 1. Exploring few basic .NET CLI commands, Project Templates
-> 1. Preparing Workspace, Solution, Project(s)
-> 1. Creating Console Application without Top Level Statements
-> 1. Exploring Program Structure
-> 1. Exploring Project Structure
-> 1. Viewing the `<Main>$()` method
-> 1. Creating Console Application with Top Level Statements
+> 1. Introduction to Variables
+> 1. Showing Compiler Version `#error version`
+> 1. ilDasm Demo
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
 
@@ -59,7 +49,7 @@
 > 1. .NET includes a cross-platform implementation of the CLR known as CoreCLR and a streamlined BCL known as CoreFX.
 > 1. Releases Long Term Support (LTS), Standard Term Support (STS)
 
-## 3. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, CoreFX basics
+## 3. 30,000 foot view of Common Language Runtime (CLR)
 
 > 1. CLR is the virtual machine component of Microsoft's .NET framework and is responsible for managing the execution of .NET programs.
 > 1. It provides core services such as memory management, thread management, and remoting, while also enforcing strict type safety and other forms of code accuracy that promote security and robustness.
@@ -85,9 +75,7 @@
 > 1. The dot operator (.) is used to access members of a namespace, type, or object.
 > 1. Demos -> ProgramStructureDemo.csproj.
 
-## 5. Exploring few basic .NET CLI commands, Project Templates
-
-> 1. Discussion and Demo
+## X. Dotnet CLI Commands
 
 ```bash
 dotnet --info
@@ -105,33 +93,23 @@ dotnet new list
 dotnet new --help
 ```
 
-## 6. Preparing Workspace, Solution, Project(s)
-
-> 1. Discussion and Demo
-
-## 7. Creating Console Application without Top Level Statements
+## X. Common our First C# Program
 
 ```bash
 dotnet new console -o FirstCSharpProgram --use-program-main
 ```
 
-## 8. Exploring Program Structure
+### X.X. Few Terms
 
-> 1. Comments - Single line comments (//) and Multi-line comments (/*ddd*/).
-> 1. Statements, Statements and Expressions (sum = num1 + num2; num1 + num2 is an expression). Statement terminates with semicolon (;).
-> 1. Block of code is a set of statements that are grouped together using curly braces ({ and }). Block of code is also called as code block.
-> 1. A namespace contains types like classes to group them together.
-> 1. A class contains the members of an object, including methods.
-> 1. A method contains statements that implement an action that an object can take.
-> 1. Keywords are reserved words that have special meaning in the language. You cannot use a keyword as an identifier, such as the name of a variable, method, or class.
-> 1. A variable is a name that you create to store a value. To create a variable, you must specify the type and assign it a value. It should be in camelCase.
-> 1. Global Usings - using System; using System.Collections.Generic; using System.Linq; using System.Text; using System.Threading.Tasks;
-> 1. Local Usings - using System; using System.Collections.Generic; using System.Linq; using System.Text; using System.Threading.Tasks;
 > 1. A namespace contains types like classes to group them together.
 > 1. A class contains the members of an object, including methods.
 > 1. A method contains statements that implement an action that an object can take.
 
-## 9. Exploring Project Structure
+## X. Exploring Program Structure
+
+> 1. To be decided
+
+## X. Exploring Project Structure
 
 > 1. .csporj file
 > 1. Program.cs file
@@ -212,16 +190,14 @@ internal class Program
 
 ## 8. What is next ?
 
-> 1. Introduction to Variables
-> 1. Showing Compiler Version `#error version`
-> 1. ilDasm Demo
+> 1. What is .NET?
+> 1. .NET CLR basics
+> 1. C# Language
+> 1. Basic .NET CLI commands
+> 1. Few Terms
 > 1. `Global namespace imports` feature
 > 1. `File-scoped namespaces` feature
-> 1. Creating a Console Application with .NET (6/7/8)
-> 1. Creating a Console Application with global.json inside folder
 > 1. Importing Namespaces
 > 1. Workspace
 > 1. Notification Icon
 > 1. Multiple Projects
-> 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
