--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -8,9 +8,9 @@
 
 > 1. What is .NET?
 > 1. .NET History
-> 1. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, CoreFX basics
+> 1. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, and CoreFX basics
 > 1. C# Language
-> 1. Exploring few basic .NET CLI commands, Project Templates
+> 1. Exploring a few basic .NET CLI commands, Project Templates
 > 1. Preparing Workspace, Solution, Project(s)
 > 1. Creating Console Application without Top Level Statements
 > 1. Exploring Program Structure
