--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -1,4 +1,4 @@
-# C# Fundamentals - Part of Microservices Series Session 1 of 120
+# C# Fundamentals - Part of Microservices Series - Session 1 of 120
 
 ## Date: 14-Aug-2023
 
@@ -11,14 +11,14 @@
 > 1. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, and CoreFX basics
 > 1. C# Language
 > 1. Exploring a few basic .NET CLI commands, Project Templates
-> 1. Preparing Workspace, Solution, Project(s)
+> 1. Preparing Folder, Solution, Project(s)
 > 1. Creating Console Application without Top Level Statements
 > 1. Exploring Program Structure
 > 1. Exploring Project Structure
-> 1. Viewing the `<Main>$()` method
 > 1. Creating Console Application with Top Level Statements
+> 1. Viewing the `<Main>$()` method
 > 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
+> 1. What is next?
 
 ---
 
@@ -73,17 +73,12 @@
 
 ## 4. C# Language
 
+> 1. C# is a modern, object-oriented programming language developed by Microsoft.
 > 1. C# is a multi-paradigm programming language.
 > 1. Program class is the entry point for every C# application and is required for every C# application.
 > 1. C# is case sensitive. (C# is case sensitive. This means that uppercase and lowercase letters are treated differently.)
-> 1. The Main method is the entry point of a C# application. (There can only be one entry point in a C# program.)
+> 1. C# is commonly used for building Windows applications, web services, and games.
 > 1. Code Indentation is not required in C#. But it is recommended to use proper indentation to make the code more readable.
-> 1. .csproj file is the project file for C# projects. It contains all the information that's required to build your project.
-> 1. .sln file is the solution file for Visual Studio. It contains information about one or more projects.
-> 1. Top-level statements are statements that aren't inside any type or namespace.
-> 1. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
-> 1. The dot operator (.) is used to access members of a namespace, type, or object.
-> 1. Demos -> ProgramStructureDemo.csproj.
 
 ## 5. Exploring few basic .NET CLI commands, Project Templates
 
@@ -105,7 +100,7 @@ dotnet new list
 dotnet new --help
 ```
 
-## 6. Preparing Workspace, Solution, Project(s)
+## 6. Preparing Folder, Solution, Project(s)
 
 > 1. Discussion and Demo
 
@@ -130,6 +125,13 @@ dotnet new console -o FirstCSharpProgram --use-program-main
 > 1. A namespace contains types like classes to group them together.
 > 1. A class contains the members of an object, including methods.
 > 1. A method contains statements that implement an action that an object can take.
+> 1. The Main method is the entry point of a C# application. (There can only be one entry point in a C# program.)
+> 1. .csproj file is the project file for C# projects. It contains all the information that's required to build your project.
+> 1. .sln file is the solution file for Visual Studio. It contains information about one or more projects.
+> 1. Top-level statements are statements that aren't inside any type or namespace.
+> 1. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
+> 1. The dot operator (.) is used to access members of a namespace, type, or object.
+> 1. Demos -> ProgramStructureDemo.csproj.
 
 ## 9. Exploring Project Structure
 
