--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -104,6 +104,24 @@ dotnet new --help
 
 > 1. Discussion and Demo
 
+```powershell
+dotnet new sln -n S1
+
+dotnet new console -o ProgramStructureDemoV1
+dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
+dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+dotnet restore
+dotnet build
+dotnet run --project .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
+
+dotnet new console -o ProgramStructureDemoV2
+dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
+dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+dotnet restore
+dotnet build
+dotnet run --project .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
+```
+
 ## 7. Creating Console Application without Top Level Statements
 
 ```bash
