--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -102,25 +102,52 @@ dotnet new --help
 
 ## 6. Preparing Folder, Solution, Project(s)
 
-> 1. Discussion and Demo
+**Note:**
+
+> 1. We will be using Visual Studio Code as our IDE for this course.
+> 1. We will be learning Debugging using Visual Studio Code in **next session**.
+
+A C# project refers to a structured collection of source code files, resources, configurations, and settings that together constitute a software application or library developed using the C# programming language. In a C# project, you organize and manage your code and related assets in a way that facilitates development, compilation, testing, and deployment. A C# project typically includes:
+
+1. **Source Code Files**: These are the actual C# code files (.cs files) that contain the classes, methods, properties, and other program components.
+
+2. **Project File**: This is a configuration file (with a .csproj extension) that defines the project structure, dependencies, references, compilation settings, and other project-specific details. It's used by the build system to manage the project.
+
+3. **Solution File**: If you're working with multiple projects that are interrelated, you might organize them in a Visual Studio solution file (.sln). This helps manage and build multiple projects together.
+
+4. **References**: C# projects can reference external libraries, assemblies, and packages that provide additional functionality. These references are specified in the project file.
+
+5. **Settings and Configurations**: Projects can include settings files that store configuration data used by the application.
+
+6. **Output**: The compiled output of the project, such as executable files (.exe) for applications or library files (.dll) for class libraries.
+
+A C# project serves as a container for your code and related assets, providing an organized and manageable way to develop and build your software. It also plays a crucial role in integrating your code with build tools, version control systems, and other development processes.
+
+### 6.1. Create Solution and Project(s)
 
 ```powershell
 dotnet new sln -n S1
 
 dotnet new console -o ProgramStructureDemoV1
 dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
-dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+
+dotnet new console -o ProgramStructureDemoV2
+dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
+```
+
+![Projects And Solution |150x150](./images/S1/Projects_and_Solution.PNG
+
+### 6.2. Execute the Project(s)
+
+```powershell
 dotnet restore
 dotnet build
 dotnet run --project .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
 
-dotnet new console -o ProgramStructureDemoV2
-dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
-dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
-dotnet restore
-dotnet build
 dotnet run --project .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 ```
+
+![Executing Projects |150x150](./images/S1/Executing_Projects.PNG)
 
 ## 7. Creating Console Application without Top Level Statements
 
