--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -107,23 +107,18 @@ dotnet new --help
 > 1. We will be using Visual Studio Code as our IDE for this course.
 > 1. We will be learning Debugging using Visual Studio Code in **next session**.
 
-A C# project refers to a structured collection of source code files, resources, configurations, and settings that together constitute a software application or library developed using the C# programming language. In a C# project, you organize and manage your code and related assets in a way that facilitates development, compilation, testing, and deployment. A C# project typically includes:
-
-1. **Source Code Files**: These are the actual C# code files (.cs files) that contain the classes, methods, properties, and other program components.
-
-2. **Project File**: This is a configuration file (with a .csproj extension) that defines the project structure, dependencies, references, compilation settings, and other project-specific details. It's used by the build system to manage the project.
-
-3. **Solution File**: If you're working with multiple projects that are interrelated, you might organize them in a Visual Studio solution file (.sln). This helps manage and build multiple projects together.
-
-4. **References**: C# projects can reference external libraries, assemblies, and packages that provide additional functionality. These references are specified in the project file.
-
-5. **Settings and Configurations**: Projects can include settings files that store configuration data used by the application.
-
-6. **Output**: The compiled output of the project, such as executable files (.exe) for applications or library files (.dll) for class libraries.
+A C# project refers to a structured collection of source code files, resources, configurations, and settings that together constitute a software application or library developed using the C# programming language. In a C# project, you organize and manage your code and related assets in a way that facilitates development, compilation, testing, and deployment.
 
 A C# project serves as a container for your code and related assets, providing an organized and manageable way to develop and build your software. It also plays a crucial role in integrating your code with build tools, version control systems, and other development processes.
 
 ### 6.1. Create Solution and Project(s)
+
+> 1. **Source Code Files**: These are the actual C# code files (.cs files) that contain the classes, methods, properties, and other program components.
+> 1. **Project File**: This is a configuration file (with a .csproj extension) that defines the project structure, dependencies, references, compilation settings, and other project-specific details. It's used by the build system to manage the project.
+> 1. **Solution File**: If you're working with multiple projects that are interrelated, you might organize them in a Visual Studio solution file (.sln). This helps manage and build multiple projects together.
+> 1. **References**: C# projects can reference external libraries, assemblies, and packages that provide additional functionality. These references are specified in the project file.
+> 1. **Settings and Configurations**: Projects can include settings files that store configuration data used by the application.
+> 1. **Output**: The compiled output of the project, such as executable files (.exe) for applications or library files (.dll) for class libraries.
 
 ```powershell
 dotnet new sln -n S1
@@ -135,9 +130,13 @@ dotnet new console -o ProgramStructureDemoV2
 dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 ```
 
-![Projects And Solution |150x150](./images/S1/Projects_and_Solution.PNG
+![Projects And Solution |150x150](./images/S1/Projects_and_Solution.PNG)
 
 ### 6.2. Execute the Project(s)
+
+> 1. **dotnet restore**: Command to restore the NuGet packages and dependencies specified in the project file.
+> 1. **dotnet build**: Command to compile the source code and create executable files or libraries.
+> 1. **dotnet run**: Command to build and run the application in a single step, compiling and executing the code.
 
 ```powershell
 dotnet restore
