Swamy/12aug session 1 updates (#25)
* Changes

* Changes

* Changes

* Changes

* Changes

* Changes

* Create S2.md

* Documentation Updates

* Removed the files

* Changes

* Update tasks.json

* Update S1.md

* Update S1.md

* Changes

* Changes

* Changes

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -1,4 +1,4 @@
-# C# Fundamentals - Part of Microservices Series Session 1 of 120
+# C# Fundamentals - Part of Microservices Series - Session 1 of 120
 
 ## Date: 14-Aug-2023
 
@@ -8,17 +8,17 @@
 
 > 1. What is .NET?
 > 1. .NET History
-> 1. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, CoreFX basics
+> 1. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, and CoreFX basics
 > 1. C# Language
-> 1. Exploring few basic .NET CLI commands, Project Templates
-> 1. Preparing Workspace, Solution, Project(s)
+> 1. Exploring a few basic .NET CLI commands, Project Templates
+> 1. Preparing Folder, Solution, Project(s)
 > 1. Creating Console Application without Top Level Statements
 > 1. Exploring Program Structure
 > 1. Exploring Project Structure
-> 1. Viewing the `<Main>$()` method
 > 1. Creating Console Application with Top Level Statements
+> 1. Viewing the `<Main>$()` method
 > 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
+> 1. What is next?
 
 ---
 
@@ -73,17 +73,12 @@
 
 ## 4. C# Language
 
+> 1. C# is a modern, object-oriented programming language developed by Microsoft.
 > 1. C# is a multi-paradigm programming language.
 > 1. Program class is the entry point for every C# application and is required for every C# application.
 > 1. C# is case sensitive. (C# is case sensitive. This means that uppercase and lowercase letters are treated differently.)
-> 1. The Main method is the entry point of a C# application. (There can only be one entry point in a C# program.)
+> 1. C# is commonly used for building Windows applications, web services, and games.
 > 1. Code Indentation is not required in C#. But it is recommended to use proper indentation to make the code more readable.
-> 1. .csproj file is the project file for C# projects. It contains all the information that's required to build your project.
-> 1. .sln file is the solution file for Visual Studio. It contains information about one or more projects.
-> 1. Top-level statements are statements that aren't inside any type or namespace.
-> 1. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
-> 1. The dot operator (.) is used to access members of a namespace, type, or object.
-> 1. Demos -> ProgramStructureDemo.csproj.
 
 ## 5. Exploring few basic .NET CLI commands, Project Templates
 
@@ -105,9 +100,53 @@ dotnet new list
 dotnet new --help
 ```
 
-## 6. Preparing Workspace, Solution, Project(s)
+## 6. Preparing Folder, Solution, Project(s)
 
-> 1. Discussion and Demo
+**Note:**
+
+> 1. We will be using Visual Studio Code as our IDE for this course.
+> 1. We will be learning Debugging using Visual Studio Code in **next session**.
+
+A C# project refers to a structured collection of source code files, resources, configurations, and settings that together constitute a software application or library developed using the C# programming language. In a C# project, you organize and manage your code and related assets in a way that facilitates development, compilation, testing, and deployment.
+
+A C# project serves as a container for your code and related assets, providing an organized and manageable way to develop and build your software. It also plays a crucial role in integrating your code with build tools, version control systems, and other development processes.
+
+### 6.1. Create Solution and Project(s)
+
+> 1. **Source Code Files**: These are the actual C# code files (.cs files) that contain the classes, methods, properties, and other program components.
+> 1. **Project File**: This is a configuration file (with a .csproj extension) that defines the project structure, dependencies, references, compilation settings, and other project-specific details. It's used by the build system to manage the project.
+> 1. **Solution File**: If you're working with multiple projects that are interrelated, you might organize them in a Visual Studio solution file (.sln). This helps manage and build multiple projects together.
+> 1. **References**: C# projects can reference external libraries, assemblies, and packages that provide additional functionality. These references are specified in the project file.
+> 1. **Settings and Configurations**: Projects can include settings files that store configuration data used by the application.
+> 1. **Output**: The compiled output of the project, such as executable files (.exe) for applications or library files (.dll) for class libraries.
+
+```powershell
+dotnet new sln -n S1
+
+dotnet new console -o ProgramStructureDemoV1
+dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
+
+dotnet new console -o ProgramStructureDemoV2
+dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
+```
+
+![Projects And Solution |150x150](./images/S1/Projects_and_Solution.PNG)
+
+### 6.2. Execute the Project(s)
+
+> 1. **dotnet restore**: Command to restore the NuGet packages and dependencies specified in the project file.
+> 1. **dotnet build**: Command to compile the source code and create executable files or libraries.
+> 1. **dotnet run**: Command to build and run the application in a single step, compiling and executing the code.
+
+```powershell
+dotnet restore
+dotnet build
+dotnet run --project .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
+
+dotnet run --project .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
+```
+
+![Executing Projects |150x150](./images/S1/Executing_Projects.PNG)
 
 ## 7. Creating Console Application without Top Level Statements
 
@@ -130,6 +169,13 @@ dotnet new console -o FirstCSharpProgram --use-program-main
 > 1. A namespace contains types like classes to group them together.
 > 1. A class contains the members of an object, including methods.
 > 1. A method contains statements that implement an action that an object can take.
+> 1. The Main method is the entry point of a C# application. (There can only be one entry point in a C# program.)
+> 1. .csproj file is the project file for C# projects. It contains all the information that's required to build your project.
+> 1. .sln file is the solution file for Visual Studio. It contains information about one or more projects.
+> 1. Top-level statements are statements that aren't inside any type or namespace.
+> 1. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
+> 1. The dot operator (.) is used to access members of a namespace, type, or object.
+> 1. Demos -> ProgramStructureDemo.csproj.
 
 ## 9. Exploring Project Structure
 
