--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -113,13 +113,6 @@ A C# project serves as a container for your code and related assets, providing a
 
 ### 6.1. Create Solution and Project(s)
 
-> 1. **Source Code Files**: These are the actual C# code files (.cs files) that contain the classes, methods, properties, and other program components.
-> 1. **Project File**: This is a configuration file (with a .csproj extension) that defines the project structure, dependencies, references, compilation settings, and other project-specific details. It's used by the build system to manage the project.
-> 1. **Solution File**: If you're working with multiple projects that are interrelated, you might organize them in a Visual Studio solution file (.sln). This helps manage and build multiple projects together.
-> 1. **References**: C# projects can reference external libraries, assemblies, and packages that provide additional functionality. These references are specified in the project file.
-> 1. **Settings and Configurations**: Projects can include settings files that store configuration data used by the application.
-> 1. **Output**: The compiled output of the project, such as executable files (.exe) for applications or library files (.dll) for class libraries.
-
 ```powershell
 dotnet new sln -n S1
 
@@ -148,7 +141,7 @@ dotnet run --project .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 
 ![Executing Projects |150x150](./images/S1/Executing_Projects.PNG)
 
-## 7. Creating Console Application without Top Level Statements
+## 7. Modifying `ProgramStructureDemoV1.csproj` Console Application with Main() Method
 
 ```bash
 dotnet new console -o FirstCSharpProgram --use-program-main
@@ -179,36 +172,44 @@ dotnet new console -o FirstCSharpProgram --use-program-main
 
 ## 9. Exploring Project Structure
 
-> 1. .csporj file
-> 1. Program.cs file
-> 1. obj folder - intermediate files
-> 1. bin folder - output files
+> 1. **Source Code Files**: These are the actual C# code files (.cs files) that contain the classes, methods, properties, and other program components.
+> 1. **Project File**: This is a configuration file (with a .csproj extension) that defines the project structure, dependencies, references, compilation settings, and other project-specific details. It's used by the build system to manage the project.
+> 1. **Solution File**: If you're working with multiple projects that are interrelated, you might organize them in a Visual Studio solution file (.sln). This helps manage and build multiple projects together.
+> 1. **References**: C# projects can reference external libraries, assemblies, and packages that provide additional functionality. These references are specified in the project file.
+> 1. **Settings and Configurations**: Projects can include settings files that store configuration data used by the application.
+> 1. **Output**: The compiled output of the project, such as executable files (.exe) for applications or library files (.dll) for class libraries.
+> 1. **bin folder**: This folder contains the compiled output files, such as executable (.exe) or library (.dll) files, produced by building the project.
+> 1. **obj folder**: This folder holds intermediate build files created during the build process, including object files and metadata, used to create the final output in the bin folder.
 
-## X. Common Language Infrastructure (CLI)
+## 10. Creating `ProgramStructureDemoV2.csproj` Console Application with Top Level Statements
 
-> 1. CLI is an open specification developed by Microsoft and standardized by ISO and ECMA that describes executable code and a runtime environment that allows multiple high-level languages to be used on different computer platforms without being rewritten for specific architectures.
+> 1. Discussion and Demo
 
-**Reference(s):**
+## 11. Viewing the `<Main>$()` method
 
-> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure](https://en.wikipedia.org/wiki/Common_Language_Infrastructure)
+> 1. Discussion and Demo
+
+## X. SUMMARY / RECAP / Q&A
+
+> 1. Discussion and Demo
 
 ---
 
-> 1. .NET CLR, BCL, CoreCLR, CoreFX basics
+## X. What is next ?
 
-> 1. Basic .NET CLI commands - Project Templates
-> 1. Few Terms
-> 1. Exploring Program Structure
-> 1. Exploring Project Structure
-> 1. ilDasm Demo
-> 1. Console Application with and without Top Level Statements
->    - 1.1 Without Top Level Statements
->    - 1.2 With Top Level Statements
 > 1. Introduction to Variables
+> 1. Showing Compiler Version `#error version`
+> 1. ilDasm Demo
+> 1. `Global namespace imports` feature
+> 1. `File-scoped namespaces` feature
+> 1. Common Language Infrastructure (CLI)
+> 1. Creating a Console Application with .NET (6/7/8)
+> 1. Creating a Console Application with global.json inside folder
+> 1. Importing Namespaces
+> 1. Notification Icon
+> 1. Multiple Projects
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
-
-## Few Points
 
 ## Next Session
 
@@ -249,25 +250,3 @@ internal class Program
 ```
 
 ![Demo 2 |150x150](./images/1/demo2.PNG)
-
-## 7. SUMMARY / RECAP / Q&A
-
-> 1. Discussion and Demo
-
----
-
-## 8. What is next ?
-
-> 1. Introduction to Variables
-> 1. Showing Compiler Version `#error version`
-> 1. ilDasm Demo
-> 1. `Global namespace imports` feature
-> 1. `File-scoped namespaces` feature
-> 1. Creating a Console Application with .NET (6/7/8)
-> 1. Creating a Console Application with global.json inside folder
-> 1. Importing Namespaces
-> 1. Workspace
-> 1. Notification Icon
-> 1. Multiple Projects
-> 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
