--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -4,6 +4,8 @@
 
 ## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880)
 
+![Viswanatha Swamy P K |150x150](./images/S1/ViswanathaSwamyPK.PNG)
+
 ## Agenda for this session
 
 > 1. What is .NET?
