--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -145,32 +145,90 @@ dotnet run --project .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 
 ## 7. Modifying `ProgramStructureDemoV1.csproj` Console Application with Main() Method
 
-```bash
-dotnet new console -o FirstCSharpProgram --use-program-main
+### 7.1. Services/Maths.cs
+
+```csharp
+namespace ProgramStructureDemoV1.Services
+{
+    public class Maths
+    {
+        public static int MaxValue = 100;
+
+        public int AddNumbers(int a, int b)
+        {
+            return a + b;
+        }
+
+        public static int AddNumbersV1(int a, int b) => a + b;
+    }
+}
+```
+
+### 7.2. Program.cs
+
+```csharp
+/*
+    File: Program.cs
+    Author: Viswanatha Swamy
+    Created On: 14-Aug-2023
+*/
+
+using System;
+using ProgramStructureDemoV1.Services;
+
+/// <summary>
+/// This is a demo program to show the structure of a C# program.
+/// </summary>
+namespace ProgramStructureDemo
+{
+    // Program is a class is the container of the program. It is the entry point of the program.
+    class Program
+    {
+
+        // Main method is the entry point of the program
+        static void Main(string[] args)
+        { /* Block of code Starts here */
+
+            Console.WriteLine("Hello .NET 8 World!"); /* This is a statement and it ends with semi colon. */
+
+            Console.WriteLine("Enter your name: ");
+            var name = Console.ReadLine();
+            Console.WriteLine($"Hello {name}!");
+
+            int num1 = 10, num2 = 20; /* Variable declaration and initialization. */
+            Maths maths = new(); /* Instantiation of Maths class. */
+            Console.WriteLine($"{num1} + {num2} = {maths.AddNumbers(num1, num2)}");
+
+            /* Accessing static members of a class. */
+            Console.WriteLine($"{num1} + {num2} = {Maths.AddNumbersV1(num1, num2)}");
+            Console.WriteLine($"Max value is {Maths.MaxValue}");
+
+            /* The dot operator (.) is used to access members of a namespace, type, or object. */
+            Console.WriteLine("Press any key to exit.");
+            Console.ReadKey();
+
+            // Console.ReadKey(); & Console.Readkey(); are different /* C# is a case sensitive language. */
+
+        } /* Block of code Ends here */
+    }
+
+}
 ```
 
 ## 8. Exploring Program Structure
 
 > 1. Comments - Single line comments (//) and Multi-line comments (/*ddd*/).
 > 1. Statements, Statements and Expressions (sum = num1 + num2; num1 + num2 is an expression). Statement terminates with semicolon (;).
-> 1. Block of code is a set of statements that are grouped together using curly braces ({ and }). Block of code is also called as code block.
-> 1. A namespace contains types like classes to group them together.
-> 1. A class contains the members of an object, including methods.
-> 1. A method contains statements that implement an action that an object can take.
 > 1. Keywords are reserved words that have special meaning in the language. You cannot use a keyword as an identifier, such as the name of a variable, method, or class.
-> 1. A variable is a name that you create to store a value. To create a variable, you must specify the type and assign it a value. It should be in camelCase.
-> 1. Global Usings - using System; using System.Collections.Generic; using System.Linq; using System.Text; using System.Threading.Tasks;
-> 1. Local Usings - using System; using System.Collections.Generic; using System.Linq; using System.Text; using System.Threading.Tasks;
-> 1. A namespace contains types like classes to group them together.
-> 1. A class contains the members of an object, including methods.
+> 1. Block of code is a set of statements that are grouped together using curly braces ({ and }). Block of code is also called as code block.
 > 1. A method contains statements that implement an action that an object can take.
+> 1. A class contains the members of an object, including methods.
+> 1. A namespace contains types like classes to group them together.
+> 1. A variable is a name that you create to store a value. To create a variable, you must specify the type and assign it a value. It should be in camelCase.
+> 1. Local Usings - using System; using System.Collections.Generic; using System.Linq; using System.Text; using System.Threading.Tasks;
 > 1. The Main method is the entry point of a C# application. (There can only be one entry point in a C# program.)
-> 1. .csproj file is the project file for C# projects. It contains all the information that's required to build your project.
-> 1. .sln file is the solution file for Visual Studio. It contains information about one or more projects.
-> 1. Top-level statements are statements that aren't inside any type or namespace.
-> 1. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
+> 1. Top-level statements are statements that aren't inside any type or namespace. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
 > 1. The dot operator (.) is used to access members of a namespace, type, or object.
-> 1. Demos -> ProgramStructureDemo.csproj.
 
 ## 9. Exploring Project Structure
 
