--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -226,7 +226,7 @@ namespace ProgramStructureDemo
 > 1. A class contains the members of an object, including methods.
 > 1. A namespace contains types like classes to group them together.
 > 1. A variable is a name that you create to store a value. To create a variable, you must specify the type and assign it a value. It should be in camelCase.
-> 1. Local Usings - using System; using System.Collections.Generic; using System.Linq; using System.Text; using System.Threading.Tasks;
+> 1. Local Usings in C# allow importing namespaces like 'System' and 'System.Collections.Generic' to access their classes and functionality within a specific code block.
 > 1. The Main method is the entry point of a C# application. (There can only be one entry point in a C# program.)
 > 1. Top-level statements are statements that aren't inside any type or namespace. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
 > 1. The dot operator (.) is used to access members of a namespace, type, or object.
