--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -216,6 +216,8 @@ namespace ProgramStructureDemo
 }
 ```
 
+![Program Execution](./images/S1/Program_Execution.PNG)
+
 ## 8. Exploring Program Structure
 
 > 1. Comments - Single line comments (//) and Multi-line comments (/*ddd*/).
@@ -244,11 +246,58 @@ namespace ProgramStructureDemo
 
 ## 10. Creating `ProgramStructureDemoV2.csproj` Console Application with Top Level Statements
 
-> 1. Discussion and Demo
+### 10.1. Program.cs
+
+```csharp
+using ProgramStructureDemoV2.Services;
+
+// Uncomment the following line to see the exception with Program.<Main>$(String[] args) method.
+// throw new Exception("This is an exception");
+
+Console.ForegroundColor = ConsoleColor.Green;
+
+Console.WriteLine("Hello .NET 8 World!"); /* This is a statement and it ends with semi colon. */
+
+Console.WriteLine("Enter your name: ");
+var name = Console.ReadLine();
+Console.WriteLine($"Hello {name}!");
+
+int num1 = 10, num2 = 20; /* Variable declaration and initialization. */
+Maths maths = new(); /* Instantiation of Maths class. */
+Console.WriteLine($"{num1} + {num2} = {maths.AddNumbers(num1, num2)}");
+
+/* Accessing static members of a class. */
+Console.WriteLine($"{num1} + {num2} = {Maths.AddNumbersV1(num1, num2)}");
+Console.WriteLine($"Max value is {Maths.MaxValue}");
+
+Console.ResetColor();
+
+/* The dot operator (.) is used to access members of a namespace, type, or object. */
+Console.WriteLine("Press any key to exit.");
+Console.ReadKey();
+```
+
+![Program Execution](./images/S1/Program_Execution.PNG)
 
 ## 11. Viewing the `<Main>$()` method
 
 > 1. Discussion and Demo
+
+```csharp
+using System;
+using System.Runtime.CompilerServices;
+
+[CompilerGenerated]
+internal class Program
+{
+    private static void <Main>$(string[] args)
+    {
+        Console.WriteLine("Hello, World!");
+    }
+}
+```
+
+![Auto Generated Main Method |150x150](./images/S1/Auto_Generated_Main_Method.PNG)
 
 ## X. SUMMARY / RECAP / Q&A
 
@@ -271,43 +320,3 @@ namespace ProgramStructureDemo
 > 1. Multiple Projects
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
-
-## Next Session
-
-> 1. Top-level statements are statements that aren't inside any type or namespace. They can be used to declare variables and their types, define functions, and define classes.
-
-## 1. Console Application with and without Top Level Statements
-
-> 1. Discussion and Demo
-
-### 1.1 Without Top Level Statements
-
-```bash
-dotnet new console -o demo1 --use-program-main
-```
-
-![Demo 1 |150x150](./images/1/demo1.PNG)
-
-### 1.2. With Top Level Statements
-
-> 1. Top level Statements, will create `Program` class, and `<Main>$()` method
-
-```bash
-dotnet new console -o demo2
-```
-
-```csharp
-using System;
-using System.Runtime.CompilerServices;
-
-[CompilerGenerated]
-internal class Program
-{
-    private static void <Main>$(string[] args)
-    {
-        Console.WriteLine("Hello, World!");
-    }
-}
-```
-
-![Demo 2 |150x150](./images/1/demo2.PNG)
