--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -220,7 +220,7 @@ namespace ProgramStructureDemo
 
 ## 8. Exploring Program Structure
 
-> 1. Comments - Single line comments (//) and Multi-line comments (/*ddd*/).
+> 1. Comments - Single line comments (`//`) and Multi-line comments (`/*ddd*/`).
 > 1. Statements, Statements and Expressions (sum = num1 + num2; num1 + num2 is an expression). Statement terminates with semicolon (;).
 > 1. Keywords are reserved words that have special meaning in the language. You cannot use a keyword as an identifier, such as the name of a variable, method, or class.
 > 1. Block of code is a set of statements that are grouped together using curly braces ({ and }). Block of code is also called as code block.
@@ -305,7 +305,7 @@ internal class Program
 
 ---
 
-## X. What is next ?
+## X. What is next?
 
 > 1. Introduction to Variables
 > 1. Showing Compiler Version `#error version`
@@ -319,4 +319,4 @@ internal class Program
 > 1. Notification Icon
 > 1. Multiple Projects
 > 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
+> 1. What is next?
